oracle registry push

--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -2,7 +2,7 @@ app:
   build:
     image: phx.ocir.io/axyp8vsk2dul/ibmappconnect
     dockerfile_path: Dockerfile
-azure_dockercfg:
-  image: codeship/azure-dockercfg-generator
-  add_docker: true
-  encrypted_env_file: az_config_encrypted
+oracle_dockercfg:
+  image: codeship/myservice-dockercfg-generator
+  encrypted_env_file:
+    - creds.encrypted
