--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,13 +1,13 @@
 # codeship-steps.yml
-- name: Check response to kubectl get nodes
-  command: kubectl get nodes
-  service: app
-- name: Build and push to Azure Docker Registry
+- name: Build and push to Oracle Docker Registry
   service: app
   type: push
   tag: master
   image_name: phx.ocir.io/axyp8vsk2dul/ibmappconnect
   image_tag: "{{ .CommitID }}"
-  registry: dockerhouse.azurecr.io
-  dockercfg_service: azure_dockercfg
+  registry: phx.ocir.io
+  encrypted_dockercfg_path: dockercfg.encrypted
+- name: Check response to kubectl get nodes
+  command: kubectl get nodes
+  service: appkubectl
 
